--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -17,4 +17,4 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run Python script
-      run: python daily.py
+      run: python3 src/daily.py
