--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -4,6 +4,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -18,3 +21,11 @@ jobs:
 
     - name: Run Python script
       run: python3 src/daily.py
+
+    - name: Commit changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add mnemonic/daily.json
+        git commit -m 'Update mnemonic/daily.json'
+        git push
