--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -30,5 +30,9 @@ jobs:
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add mnemonic/daily.json
-        git commit -m 'Update mnemonic/daily.json'
-        git push
+        if git diff --cached --quiet; then
+          echo "No changes to commit"
+        else
+          git commit -m 'Update mnemonic/daily.json'
+          git push
+        fi
